# word_searcher

./: .gitignore  README.md  main.py  pyproject.toml
word_searcher/database/: DBConnector.py  DefinitionObject.py  HTMLReader.py
word_searcher/user_input/: Prompt.py  QueryObject.py
